tests/parser/fail/00_binary_missing.zulerr
2 +
---
EXPECTED_EXPRESSION
